--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,4 +10,5 @@
 <div class="text-center">
     <h1 class="display-4">Version 1</h1>
     <p>Version 1 is now live!</p>
+    <p>Can't wait to see it</p>
 </div>
